--- a/CV/index.html
+++ b/CV/index.html
@@ -47,9 +47,7 @@
                     <li class="skills_list_item"><span class="skills_list_text">Html</span></li>
                     <li class="skills_list_item"><span class="skills_list_text">Css</span></li>
                     <li class="skills_list_item"><span class="skills_list_text">JS</span></li>
-                    <li class="skills_list_item"><span class="skills_list_text">Python</span></li>
-                    <li class="skills_list_item"><span class="skills_list_text">Octave</span></li>
-                    <li class="skills_list_item"><span class="skills_list_text">Scilab</span></li>
+                    <li class="skills_list_item"><span class="skills_list_text">Sass</span></li>
                 </ul>
             </div>
             <!--Soft Skills-->
